--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,20 @@
     </dependency>
 	
   </dependencies>
+  
+    <scm>
+      <connection>scm:git:git@github.com:Muthupalan/Muthu.git</connection>
+      <url>scm:git:git@github.com:Muthupalan/Muthu.git</url>
+      <developerConnection>scm:git:git@github.com:Muthupalan/Muthu.git</developerConnection>
+    </scm>
+	
+	 <build>
+	<plugins>
+	 <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-release-plugin</artifactId>
+      <version>2.4.1</version>
+    </plugin>
+	</plugins>
+</build>
 </project>
